--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -45,9 +45,9 @@ header {
     position: absolute;
     top: 10px;
     width: 100%;
-    height: auto;
-    border-radius: 0%;
-    z-index: 0;
+    /* height: em; */
+    /* border-radius: %; */
+    z-index: -1;
     align-self: flex-start;
     order: 1;
 }
@@ -66,7 +66,7 @@ nav {
     width: 6em;
     justify-items: flex-start;
     margin-top: -2em;
-    margin-left: 1em;
+    margin-left: 4em;
     order: 3;
     padding-left: 1em;
     text-decoration: none;
@@ -118,11 +118,13 @@ form input[type="submit"] {
 }
 
 /* Footer styles */
-.footer {
+#footer {
     display: flex;
-    width: fit-content;
+    width: 100%;
     height: 2rem;
-    flex-direction: column;
+    flex-direction: row;
+   justify-content: center;
+   margin-left: 4rem;
 }
 
 #nav_background {
@@ -140,4 +142,10 @@ form input[type="submit"] {
 /* Link color for all links */
 a {
     color: grey;
+}
+header #name {
+    align-self: flex-end;
+    order: -1;
+    z-index: 1;
+    margin-left: 2em;
 }
